<resources>
    <string name="app_name">Programmer Calc</string>
    <string name="binary">Bin</string>
    <string name="decimal">Dec</string>
    <string name="octal">Oct</string>
    <string name="hexa">Hex</string>
    <string name="ac">AC</string>
    <string name="remove_text">⌫</string>
    <string name="e">E</string>
    <string name="f">F</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_5">5</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="ecuals">=</string>
    <string name="_4">4</string>
</resources>